--- a/circle.yml
+++ b/circle.yml
@@ -4,3 +4,5 @@ machine:
 test:
     override:
         - xcodebuild test -scheme CITest -project CITest.xcodeproj -destination 'name=iPhone 6'
+
+test2: 
